# box5

./: AGENTS.md  MANIFEST.in  README.md  box5.db  install.sh  out.txt  publish.sh  pyproject.toml  requirements.txt  run.sh  test.sh  test_bug.sql  test_bug2.sql  test_db.py  test_minimal.py  test_minimal2.py  test_minimal3.py  test_minimal4.py  test_minimal5.py  test_persist.db  test_persist.sql5wal  test_sql.py  test_sql2.py  test_ws.html  test_ws.py
Client/: README.md  api.md  api.py  config.md  config.py  main.md  main.py  sync.md  sync.py
Server/: README.md  auth.md  auth.py  box5.db  box5.sql5wal  database.md  database.py  editor_ws.md  editor_ws.py  main.md  main.py  models.md  models.py  routes.md  routes.py
Website/: README.md  main.md  main.py
_doc/: plan.md  todo.md  v0.1.md  v0.2.md  v0.3.md  v0.4.md  v0.5.md  v0.6.md  v0.7.md  v0.8.md  v0.9.md  v1.0.md  v1.1-k8s.md  v1.2-doc.md  v1.3.md  v1.4-brief.md  v1.4-ssh.md  v2.0.md  v2.1.md  v2.2.md  v2.3.md  v2.4-3mode.md  v2.4.md  v2.5.md  v2.6.md  v2.7.md
_html/: index.html  script.js  style.css
_wiki/: README.md  cors.md  docker.md  dockerfile.md  fastapi.md  jinja2.md  jwt.md  k8s.md  monaco.md  playwright.md  pty.md  pydantic.md  pytest.md  restful.md  sqlite.md  uv.md  watchdog.md  websocket.md  xtermjs.md
k8s/: Dockerfile.box5  Dockerfile.box5.md  README.md  README_tw.md  admin.py  auth.py  box5.db  ccc_server.sh  client.py  conftest.py  database_sqlite.md  database_sqlite.py  k8s_run.sh  mail.py  main.md  main.py  multi.py  requirements.txt  share.py  simple_sync.py  start.sh  sync_client.py  (+3 more)
(+64 files in other folders)
