[project]
name = "box5"
version = "0.3.0"
description = "Dropbox-like app with Client, Server, and Website"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "requests>=2.31.0",
    "watchdog>=4.0.0",
    "markdown>=3.5.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[tool.uv]
index-url = "https://pypi.org/simple"

[project.optional-dependencies]
dev = [
    "playwright>=1.40.0",
]

[dependency-groups]
dev = [
    "playwright>=1.40.0",
]